output.txt
TestListExamples.java:1: error: package org.junit does not exist
import static org.junit.Assert.*;
                       ^
TestListExamples.java:2: error: package org.junit does not exist
import org.junit.*;
^
TestListExamples.java:19: error: cannot find symbol
  @Test
   ^
  symbol:   class Test
  location: class TestListExamples
TestListExamples.java:37: error: cannot find symbol
  @Test
   ^
  symbol:   class Test
  location: class TestListExamples
TestListExamples.java:34: error: cannot find symbol
    assertEquals(expected, result);
    ^
  symbol:   method assertEquals(List<String>,List<String>)
  location: class TestListExamples
TestListExamples.java:41: error: incompatible types: List<String> cannot be converted to StringChecker
    List<String> result = ListExamples.filter(og, sc);
                                              ^
TestListExamples.java:43: error: cannot find symbol
    assertEquals(expected, result);
    ^
  symbol:   method assertEquals(List<String>,List<String>)
  location: class TestListExamples
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
